feat: add diagram crud
